// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column matches snapshot with breakpoint props 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0 {
  -webkit-flex-basis: 16.666666666666664%;
  -ms-flex-preferred-size: 16.666666666666664%;
  flex-basis: 16.666666666666664%;
  max-width: 16.666666666666664%;
}

.c0 {
  margin-left: 16.666666666666664%;
}

.c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

@media screen and (min-width:480px) {
  .c0 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    max-width: 25%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-flex-basis: 33.33333333333333%;
    -ms-flex-preferred-size: 33.33333333333333%;
    flex-basis: 33.33333333333333%;
    max-width: 33.33333333333333%;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
  }
}

@media screen and (min-width:1440px) {
  .c0 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media screen and (min-width:1600px) {
  .c0 {
    -webkit-flex-basis: 66.66666666666666%;
    -ms-flex-preferred-size: 66.66666666666666%;
    flex-basis: 66.66666666666666%;
    max-width: 66.66666666666666%;
  }
}

@media screen and (min-width:480px) {
  .c0 {
    margin-left: 25%;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    margin-left: 33.33333333333333%;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    margin-left: 41.66666666666667%;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    margin-left: 50%;
  }
}

@media screen and (min-width:1440px) {
  .c0 {
    margin-left: 58.333333333333336%;
  }
}

@media screen and (min-width:1600px) {
  .c0 {
    margin-left: 66.66666666666666%;
  }
}

@media screen and (min-width:480px) {
  .c0 {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    -webkit-order: -1;
    -ms-flex-order: -1;
    order: -1;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    -webkit-order: -1;
    -ms-flex-order: -1;
    order: -1;
  }
}

@media screen and (min-width:1440px) {
  .c0 {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }
}

@media screen and (min-width:1600px) {
  .c0 {
    -webkit-order: -1;
    -ms-flex-order: -1;
    order: -1;
  }
}

<Column
  cols={
    Object {
      "default": 2,
      "lg": 6,
      "md": 5,
      "sm": 4,
      "xl": 7,
      "xs": 3,
      "xxl": 8,
    }
  }
  offset={
    Object {
      "default": 2,
      "lg": 6,
      "md": 5,
      "sm": 4,
      "xl": 7,
      "xs": 3,
      "xxl": 8,
    }
  }
  order={
    Object {
      "default": "first",
      "lg": "first",
      "md": "last",
      "sm": "first",
      "xl": "last",
      "xs": "last",
      "xxl": "first",
    }
  }
>
  <styled.div
    $cols={
      Object {
        "default": 2,
        "lg": 6,
        "md": 5,
        "sm": 4,
        "xl": 7,
        "xs": 3,
        "xxl": 8,
      }
    }
    $offset={
      Object {
        "default": 2,
        "lg": 6,
        "md": 5,
        "sm": 4,
        "xl": 7,
        "xs": 3,
        "xxl": 8,
      }
    }
    $order={
      Object {
        "default": "first",
        "lg": "first",
        "md": "last",
        "sm": "first",
        "xl": "last",
        "xs": "last",
        "xxl": "first",
      }
    }
    className="tw-col"
  >
    <div
      className="c0 tw-col"
    />
  </styled.div>
</Column>
`;

exports[`Column matches snapshot with non-breakpoint props 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-basis: 25%;
  -ms-flex-preferred-size: 25%;
  flex-basis: 25%;
  max-width: 25%;
  margin-left: 50%;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
}

<Column
  cols={3}
  offset={6}
  order="first"
>
  <styled.div
    $cols={3}
    $offset={6}
    $order="first"
    className="tw-col"
  >
    <div
      className="c0 tw-col"
    />
  </styled.div>
</Column>
`;

exports[`Column matches snapshot with required props 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  max-width: 50%;
}

<Column
  cols={6}
>
  <styled.div
    $cols={6}
    className="tw-col"
  >
    <div
      className="c0 tw-col"
    />
  </styled.div>
</Column>
`;
